Add .gitattributes file to handle line endings